kubernetes/apps/databases/crunchy-postgres-operator/pgAdmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-private
  rules:
  - host: &host pgadmin.${SECRET_PRIVATE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pgadmin
            port:
              number: 5050
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_PRIVATE_DOMAIN//./-}-tls
